--- a/index.html
+++ b/index.html
@@ -10,15 +10,28 @@
         </head>
     <body>
         <h1>
-            <form >
+            <form id="employeeForm">
                 <input type="text" id="firstName" placeholder="First Name" />
                 <input type="text" id="lastName" placeholder="Last Name" />
                 <input type="text" id="idNumber" placeholder="ID Number" />
                 <input type="text" id="jobTitle" placeholder="Job Title" />
                 <input type="text" id="annualSalary" placeholder="Annual Salary" />
             </form>
-            <button type="submit" id="employeeSubmit">Submit</button>
+                <button type="submit" form="employeeForm" id="employeeSubmit">Submit</button>
 
         </h1>
+        <table>
+            <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>ID</th>
+                <th>Title</th>
+                <th>Annual Salary</th>
+                <th> </th>
+            </tr>
+            <tbody id="employeeInfo">
+
+            </tbody>
+        </table>
         </body>
 </html>
