--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
         </head>
     <body>
         <h1>
-            <form id="employeeForm">
+            <!-- <form id="employeeForm" name="employeeData"> -->
                 <input type="text" id="firstName" placeholder="First Name" />
                 <input type="text" id="lastName" placeholder="Last Name" />
                 <input type="text" id="idNumber" placeholder="ID Number" />
                 <input type="text" id="jobTitle" placeholder="Job Title" />
                 <input type="text" id="annualSalary" placeholder="Annual Salary" />
-            </form>
                 <button type="submit" form="employeeForm" id="employeeSubmit">Submit</button>
+            <!-- </form> -->
 
         </h1>
         <table>
