--- a/index.html
+++ b/index.html
@@ -20,18 +20,20 @@
             <!-- </form> -->
 
         </h1>
-        <table>
-            <tr>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>ID</th>
-                <th>Title</th>
-                <th>Annual Salary</th>
-                <th> </th>
-            </tr>
-            <tbody id="employeeInfo">
+        <div id="tableContainer">
+            <table>
+                <tr>
+                    <th style="padding-block: 20px">First Name</th><span style="padding: 50px"></span>
+                    <th>Last Name</th><span style="padding: 50px"></span>
+                    <th>ID</th><span style="padding: 50px"></span>
+                    <th>Title</th><span style="padding: 50px"></span>
+                    <th>Annual Salary</th><span style="padding: 50px"></span>
+                    <th> </th>
+                </tr>
+                <tbody id="employeeInfo">
 
-            </tbody>
-        </table>
+                </tbody>
+            </table>
+        </div>
         </body>
 </html>
